@@ -246,7 +246,7 @@ public class TomlParser {
 				segments[length] = value;
 			}
 		}
-		return List.of(segments);
+		return Arrays.asList(segments);
 	}
 
 	protected Object value() throws IOException {
